--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/grid.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/assets/css/layout.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/assets/css/nav.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/datePicker.css" media="screen" />
         <!--[if IE 6]><link rel="stylesheet" type="text/css" href="/assets/css/ie6.css" media="screen" /><![endif]-->
         <!--[if IE 7]><link rel="stylesheet" type="text/css" href="/assets/css/ie.css" media="screen" /><![endif]-->
 		{% block javascripts %}
