can now delete vr incidents

--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -49,9 +49,11 @@
                     </table>
                 </form>
             </div>
+            <form action="/vr/in/delete" method="post">
             <table>
                 <thead>
                     <tr>
+                        <th>&nbsp;</th>
                         <th>PSC ID</th>
                         <th>Date</th>
                         <th>LGA</th>
@@ -76,6 +78,7 @@
                 </thead>
 				{% for cl in checklists.object_list %}
                 <tr{% cycle ' class="odd"' '' %}>
+                    <td><input type="checkbox" value="{{ cl.id }}" name="ids" /></td>
                     <td>{{ cl.observer.observer_id }}</td>
                     <td>{{ cl.date|date:"D d-M" }}</td>
 										{% if cl.observer.role == "NS" or cl.observer.role == "NSC" or cl.observer.role == "SC" or cl.observer.role == "SDC" %}
@@ -161,8 +164,12 @@
 				{% endfor %}
             </table>
         </div>
-        {% if checklists.has_other_pages %}
+        
         <div class="paginator">
+            <img src="/assets/img/delete_arrow.png">
+            <input type="submit" value="Delete" name="Delete" onClick="return confirm('Are you sure you want to delete selcted incidents')"/>
+            {% if checklists.has_other_pages %}
+            <div style="float: right; width: 300px">
             <a href="{% query_string "page=page_details.first" "" %}"><span>&laquo;</span></a>
 			{% if checklists.has_previous %}
             <a href="{% query_string "page=checklists.previous_page_number" "" %}"><span>&lsaquo;</span></a>
@@ -172,8 +179,11 @@
             <a href="{% query_string 'page=checklists.next_page_number' '' %}"><span>&rsaquo;</span></a>
 			{% endif %}
             <a href="{% query_string "page=page_details.last" "" %}"><span>&raquo;</span></a>
+            </div>
+            {% endif %}
         </div>
-        {% endif %}
+        <div class="clear"></div>
+        <br />
     </div>
 </div>
 {% endblock %}
