--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -157,7 +157,7 @@
                         <a href="{% url psc.views.vr_incident_update cl.id %}">Edit</a>
                     </td>
 										<td>
-                        <a href="">Del</a>
+                        <a href="{% url psc.views.vr_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>
 												<!--<input type="checkbox" value="{{ cl.id }}" name="ids" />-->
 										</td>
                 </tr>
@@ -181,10 +181,7 @@
 			{% endif %}
             <a href="{% query_string "page=page_details.last" "" %}"><span>&raquo;</span></a>
             {% endif %}
-            <div style="float: right; margin-right: 40px;">
-                <input type="submit" value="Delete" name="Delete" onClick="return confirm('Are you sure you want to delete selcted incidents')"/>
-                <img src="/assets/img/delete_arrow.png">
-            </div>            
+                    
         </div>
         <div class="clear"></div>
         <br />
