--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -69,7 +69,7 @@
                         <th>H</th>
                         <th>J</th>
                         <th>K</th>
-                        <th class="checklist"><button onclick="location.href='{% url psc.views.dco_incident_add  %}'">Add Incident</button></th>
+                        <th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.dco_incident_add  %}'">Add Incident</button></th>
                     </tr>
                 </thead>
 				{% for cl in checklists.object_list %}
@@ -131,10 +131,12 @@
 						{% endif %}
                     </td>
                     <td class="checklist"><a href="{% url psc.views.dco_incident_update cl.id %}">Edit</a></td>
+										<td><a href="{% url psc.views.dco_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>
+										</td>
                 </tr>
 				{% empty %}
                 <tr>
-                    <td colspan="17" class="nodata">No reports yet</td>
+                    <td colspan="18" class="nodata">No reports yet</td>
                 </tr>
 				{% endfor %}
             </table>
