persistence of filtering selections and filtering based on message status

--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -8,9 +8,10 @@
         $("#reset").click(function () {
             $("#id_zone").val("");
             $("#id_state").val("");
-            $("#id_district").val("");
             $("#id_day").val("");
             $("#id_observer_id").val("");
+						$("#id_first").val("");
+						$("#id_second").val("");
             $("#filter_form").submit();
         });
     });
