--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -23,6 +23,7 @@
         <h2>Display, Claims and Objections Critical Incidents
         <span class="flag">
             <button onclick="location.href='{% url psc.views.dco_incident_list %}'">Refresh</button>
+            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url psc.views.export "dcoi" %}'">Export</button>{% endif %}
         </span>
         </h2>
         <div class="block">
