Modification updates. The application was modified to allow the display of Contact List on the dashboard and making same editable. To make this happen, various two templates files, contact_edit.html and contact_list.html were added. The forms.py, urls.py and views.py were modified.

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -70,6 +70,10 @@
 														{% endif %}
                         </ul>
                     </li>
+		     <li>
+                        <a href="{% url psc.views.contact_list %}">Contact List</a>
+                    </li>
+		     
                     <li class=" secondary logout">
                            <a href="{% url django.contrib.auth.views.logout_then_login %}">Logout</a>
                     </li>
